# VL53L5CX-BNO055-Viewer

./: MANIFEST.in  README.md  au_init.txt  pyproject.toml
assets/VL53L5CX-ToF-FoV_cba0c6d0c8d1/: main.py
firmware/: get_mac_addr.py  i2c_scan.py  main_data_wifi.py  main_data_wifi_sim.py
viewer/: __init__.py  config.py  filters.py  geometry.py  requirements.txt  scene.py  serial_reader.py  udp_reader.py  viewer.py
viewer/tests/: test_filters.py  test_geometry.py  test_serial_reader.py
vl53l5cx_bno055_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
