[project]
name = "vl53l5cx-bno055-viewer"
version = "1.0.0"
description = "Real-time point cloud viewer for VL53L5CX + BNO055"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "viser",
    "pyserial",
]

[project.scripts]
viewer = "viewer.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["viewer"]

# WICHTIG: zusätzliche Ordner einbinden
package-data = { viewer = ["../assets/*", "../firmware/*"] }

# Alternativ (robuster):
include-package-data = true
